# blogicum

./: README.md  pyproject.toml  ruff.toml
apps/blog/: forms.py  views.py
blogicum/: settings.py
tests/: conftest.py  test_auth.py  test_content.py  test_logic.py  test_routes.py  test_static_pages.py  testing_plan.md
tests/test_blog/: conftest.py  test_routes.py  test_unpublished_posts.py
