[tool.poetry]
name = "blogicum"
version = "0.1.0"
description = "Social network for personal diary publishing"
authors = ["NovaHFly <mugiviska@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
manage_tool = "manage:main"


[tool.poetry.dependencies]
python = "^3.10"
django = "^4"
django-bootstrap5 = "22.2"
beautifulsoup4 = "^4.12.3"
pillow = "9.3.0"
django-debug-toolbar = "3.8.1"
pytest-lazy-fixture = "^0.6.3"
pytest-django = "^4.8.0"

[tool.poetry.group.testing.dependencies]
ruff = "^0.4.10"
mypy = "^1.10.1"
pytest = "^7"
djlint = "^1.34.1"

[tool.djlint]
ignore = "T003,H030,H031"
max_line_length = 79


[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "blogicum.settings"
addopts = "-v"

[tool.mypy]
strict_optional = false
disable_error_code = "import-untyped"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
